<resources>
    <string name="app_name">YK Ломбард</string>
    <string name="msg_token_fmt" translatable="false">%s</string>
    <string name="permissionsLlabel">Разрешить приложению «YK Ломбард» собирать и обрабатывать Ваши данные?</string>
    <string name="personal">Фамилия, Имя, отчество (при наличии), ИИН и номер телефона – для идентификации при совершении операций по действующим микрокредитам и иных действий в приложении.</string>
    <string name="sms">SMS сообщения – для предоставления функционала приложения в процессе регистрации или восстановления пароля.</string>
    <string name="action">Действия в приложении – для анализа работы приложения и улучшения его функционирования.</string>
    <string name="apps">Информация о приложениях, установленных на устройстве – для обеспечения работы платежных сервисов.</string>
    <string name="report">Отчеты об ошибках, диагностика – для анализа работы приложения и выявления ошибок.</string>
    <string name="device">Идентификаторы устройства – для идентификации пользователя и улучшения качества работы приложения.</string>
    <string name="denide">Если Вы отказываетесь предоставить вышеперечисленные разрешения, удалите приложение «YK Ломбард» со своего устройства.</string>
    <string name="policy_header">Пользовательское соглашение для использования мобильного приложения «YK Ломбард»</string>
    <string name="policy_1">Настоящее Пользовательское соглашение использования мобильного приложения «YK Ломбард» (далее – Соглашение) определяет:</string>
    <string name="policy_1_1">1) условия пользования мобильным приложением «YK Ломбард» (далее – Приложение) и услугами, которые оказываются с использованием Приложения;</string>
    <string name="policy_1_2">2) политику конфиденциальности относительно всей информации, которую компания, оказывающая Услуги (товарищество с ограниченной ответственностью «YK Ломбард») /далее - Компания/, Правообладатели могут получить о Пользователе во время использования им Приложения, иные лица (если применимо).</string>
    <string name="policy_2">Использование Приложения означает безоговорочное согласие Пользователя с настоящим Соглашением и его условиями, в том числе Политикой конфиденциальности относительно сбора, обработки и хранения его персональной информации. Соглашаясь с ними, Пользователь также дает свое согласие на обработку персональных данных и иной личной информации, в том числе на их трансграничную передачу на условиях Соглашения. В случае несогласия с этими условиями Пользователь должен воздержаться от загрузки и использования Приложения, включая регистрацию, и/или удалить его со своего мобильного устройства.</string>
    <string name="policy_2_1">1. Используемые понятия</string>
    <string name="policy_2_2">«Договор» - Договор о предоставлении микрокредита, заключенный между Пользователем и любой из Компаний, идентифицируемый по номеру залогового билета или иным способом, доступным в Приложении.</string>
    <string name="policy_2_3">«Идентификация» - установление личности Пользователя для предоставления ему доступа в Приложение. Идентификация выполняется по Логину. Пользователь считается идентифицированным в случае ввода им в Приложении корректных Логина и пароля, а также после прохождения иных процедур идентификации и подтверждения личности Пользователя, применяемых в Приложении.</string>
    <string name="policy_2_4">«ИИН» - индивидуальный идентификационный номер, присваиваемый физическим лицам в соответствии с законодательством Республики Казахстан.</string>
    <string name="policy_2_5">«Компания» - оказывающее Услуги с использованием Приложения юридическое лицо, зарегистрированное в Республике Казахстан - товарищество с ограниченной ответственностью «YK Ломбард».</string>
    <string name="policy_2_6">«Логин» – имя учетной записи Пользователя, выраженное в цифрах, представляющее собой ИИН Пользователя.</string>
    <string name="policy_2_7">«Микрокредит» - деньги в национальной валюте Республики Казахстан, предоставляемые Пользователю Компанией (являющейся организацией, осуществляющей микрофинансовую деятельность) на условиях Договора.</string>
    <string name="policy_2_8">«Номер телефона» – номер мобильного телефона, предоставленный Пользователем при обращении в филиал одной из Компаний либо самостоятельно установленный им в Приложении, используемый в Приложении для целей регистрации, восстановления пароля, а также для направления уведомлений в соответствии с Договором и Соглашением.</string>
    <string name="policy_2_9">«Пользователь» - любое физическое лицо, использующее Приложение.</string>
    <string name="policy_2_10">«Правообладатели» - лицо (-а), обладающее (-ие) исключительными правами на Приложение, переданное в пользование Компании.</string>
    <string name="policy_2_12">«Приложение» - настоящее приложение «YK Ломбард», обеспечивающее оказание Услуг посредством мобильного телефона или иного устройства, поддерживающего Приложение и доступ в Интернет.</string>
    <string name="policy_2_11">«Услуги» - возможность удаленного проведения доступных в Приложении операций, получения и обмена информацией (полный перечень определяется, исходя из доступного на момент использования Приложения функционала). Услуги предоставляются с учетом условий Договора, и оформление документов, необходимых для этого, может осуществляться посредством Приложения путем заполнения в нем соответствующего электронного шаблона, если иное не предусмотрено Договором. В то же время при любом противоречии оказания Услуг по Соглашению с Договором, преимущественную силу будут иметь условия Договора.</string>
    <string name="policy_2_13">«Электронные ресурсы» - используемый Компаниями для оказания информационных и других услуг интернет-сайт: www.uk-lombard.kz, в том числе его мобильная версия (включая доступные в них сервисы).</string>
    <string name="policy_3"> 2. Условия оказания Услуг</string>
    <string name="policy_3_1">2.1. Услуги оказываются Компанией, при условии заключения настоящего Соглашения. Оказание услуг выполняется по месту заключения Договора – в Республике Казахстан. В случае, если через Приложение выполняется соответствующий платеж - платежная услуга предоставляется через стороннего поставщика платежных услуг (обслуживающий банк). Компания в связи с этим несет ответственность за возможные возмещения, жалобы и другие претензии, связанные с транзакциями в Приложении, только в пределах условий договоров эквайринга, которые были заключены с обслуживающим банком с учетом правил соответствующих МПС.</string>
    <string name="policy_3_2">2.2. Посредством Приложения доступны следующие Услуги Компании, предоставляемые в рамках Договоров с Пользователями:</string>
    <string name="policy_3_3">2.2.1. увеличение (продление) срока действия Договора;</string>
    <string name="policy_3_4">2.2.2. получение информации о действующих Договорах и размерах задолженностей по ним;</string>
    <string name="policy_3_5">2.2.3. получение иной информации, связанной с Договором, или по иным сервисам Компаний.</string>
    <string name="policy_3_6">2.3. Ограничения, условия и лимиты, которые могут влиять на получение Услуг Пользователем, определяются с учетом условий Договоров.</string>
    <string name="policy_3_7">2.4. Инициирование получения Пользователем соответствующей Услуги посредством Приложения выполняется путем заполнения и подтверждения соответствующих электронных шаблонов, а также осуществления определенных действий, доступных в интерфейсе. Подтверждение соответствующего шаблона/осуществление действий после входа с выполнением идентификации Пользователя в Приложении подтверждает однозначное согласие Пользователя с его/их содержанием.</string>
    <string name="policy_3_8">2.5. Режим конфиденциальности персональных (личных) и иных данных (информации) Пользователя, используемых при работе с Приложением, определяется в разделе 4 настоящего Соглашения.</string>
    <string name="policy_3_9">3. Учетная запись Пользователя</string>
    <string name="policy_3_10">3.1. У Пользователя есть ограниченное, неисключительное, отзываемое, непередаваемое и не подлежащее передаче по сублицензии право использовать и иметь доступ к Приложению в той форме, которую Компании периодически предлагают исключительно для целей, изложенных в настоящем Соглашении. Лицензия, предоставляемая Пользователю для Приложения для Android, загруженного из Google Play (дополнительно ограничивается лицензией на использование Приложения в любых фирменных продуктах Android, которыми владеет или управляет Пользователь). Любые права, не предоставленные прямо в настоящем документе Компаниями, защищены.</string>
    <string name="policy_3_11">3.2. Все права на интеллектуальную собственность, относящиеся к Приложению или связанные с ним, а также относящиеся к ним документы и все их части и копии, остаются в исключительном распоряжении и являются исключительной собственностью Компании/Правообладателей. «Права на интеллектуальную собственность» означают авторские и связанные с ними права (включая права на базы данных и каталоги, а также права на фотографии), патенты, полезные модели, права на дизайн, товарные знаки, торговые названия, коммерческие секреты, ноу-хау и любые другие формы зарегистрированных или незарегистрированных прав на интеллектуальную собственность.</string>
    <string name="policy_3_12">3.3. Настоящее Соглашение не предоставляет Пользователю никаких прав на интеллектуальную собственность по Приложению, и все права, не предоставленные в явной форме в настоящем Соглашении, сохраняются за Компанией /Правообладателями.</string>
    <string name="policy_3_13">3.4. Для использования функций Приложения, обеспечивающих доступ к данным по микрокредитам и проведению операций по ним, Пользователь должен создать учетную запись Пользователя (выполнить регистрацию в Приложении), следуя инструкциям по регистрации. Регистрация учетной записи требует использования Логина, номера телефона и пароля. Пользователь соглашается поддерживать информацию, связанную со своей учетной записью точной, полной и актуальной.</string>
    <string name="policy_3_14">3.5. Пользователь гарантирует, что Логин и другие данные Пользователя и эквивалентная информация, необходимая для доступа к учетной записи Пользователя, являются конфиденциальными и используются безопасным образом, недоступным третьим сторонам. Пользователь может иметь только одну личную учетную запись.</string>
    <string name="policy_3_15">3.6. Если есть подозрение, что какое-либо постороннее лицо узнало учетные данные Пользователя или имеет доступ к учетной записи Пользователя, Пользователь должен немедленно сообщить об этом Компании, с которой заключен Договор. Пользователь отвечает за любое использование Приложения любыми третьими лицами и любую деятельность под учетной записью Пользователя.</string>
    <string name="policy_3_16">3.7. Пользователь, решивший отказаться от использования Приложения и проведения онлайн-операций, имеет право удалить Приложение</string>
    <string name="policy_4">4. Политика конфиденциальности</string>
    <string name="policy_4_1">Персональная (личная) и иная конфиденциальная информация Пользователей, которую получает и обрабатывает Приложение</string>
    <string name="policy_4_2">4.1. В рамках настоящего Соглашения под персональной (личной) и иной конфиденциальной информацией Пользователя (далее «персональная информация») понимаются:</string>
    <string name="policy_4_3">4.1.1. личная информация, которую Пользователь предоставляет о себе самостоятельно при регистрации (создании учётной записи) или в процессе использования Приложения, включая следующие персональные данные Пользователя для использования сервисов Приложения – получения Услуг: фамилия, имя, отчество (при наличии), ИИН, номер телефона;</string>
    <string name="policy_4_4">4.1.2. Пользовательские данные, которые Пользователь предоставляет по своему усмотрению:</string>
</resources>